recursion.cons.reverse.Reverse.scala.code
def reverse(l:List[Int]): List[Int] = {
  if(l==Nil){
    return Nil;
  }
  
  return reverse(l.tail)::l.head;
}